--- a/css/all.scss
+++ b/css/all.scss
@@ -334,6 +334,26 @@ form {
 
 }
 
+// Cookies
+#slideDisplayWindow {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: -1000px;
+  color: #fff;
+  > div {
+    background: rgba(234,90,58,0.8);
+    @include border-radius(5px 5px 0 0);
+    padding-bottom: 20px;
+    .closePopup {
+      @include font-size(30px);
+      position: absolute;
+      right: 15px;
+      top: 15px;
+      cursor: pointer;
+    }
+  }
+}
 
 
 
