Section Builder and Intro Section

--- a/css/sections.scss
+++ b/css/sections.scss
@@ -23,7 +23,7 @@
     }
     .section-template {
         .section-left-column, .section-right-column {
-          padding-bottom: 50px;
+          //padding-bottom: 50px;
         }
         .section-overlay {
           position: absolute;
