--- a/css/blog.scss
+++ b/css/blog.scss
@@ -7,7 +7,19 @@
 .author {
   padding-left: 0;
 }
-
+//json driven template
+#blog-post-index {
+  min-height: 300px;
+  position: relative;
+  .loading {
+    position: absolute;
+    left: 50%;
+    margin-left: -25px;
+    top: 50%;
+    margin-top: -25px;
+    display: none;
+  }
+}
 .blog-post {
   margin-bottom: 25px;
     article {
@@ -18,6 +30,9 @@
           position: relative;
           margin-bottom: 15px;
           background: #eaeaea;
+          @include flexbox;
+          @include flexAlignItems(center);
+          @include justifyContent(center);
             &:hover img {
               @include scale(1.25);
             }
@@ -89,10 +104,7 @@
     }
 }
 .author-name {
-  @include flexbox;
-  @include flexAlignItems(flex-start);
-  @include flexdirection(column);
-  height: 50px;
+  margin-top: 10px;
     b {
       padding-left: 10px;
     }
