--- a/css/carousel_gallery.scss
+++ b/css/carousel_gallery.scss
@@ -1,4 +1,3 @@
-//CAROUSEL
 #photo-gallery {
   .carousel-indicators {
     bottom: -40px;
@@ -13,13 +12,17 @@
     position: relative;
     height: 260px;
     overflow: hidden;
+    @include flexbox;
+    @include flexAlignItems(center);
+    background: #eaeaea;
+
     figcaption {
       position: absolute;
       bottom: 0;
       background: rgba(0,0,0,0.5);
       color: #fff;
-      left: 15px;
-      right: 15px;
+      left: 0;
+      right: 0;
       h3 {
         padding: 0 5px;
       }
