--- a/css/all.css
+++ b/css/all.css
@@ -2571,13 +2571,6 @@ body.vjs-full-window {
 #blog-post-index {
   min-height: 300px;
   position: relative; }
-  #blog-post-index .loading {
-    position: absolute;
-    left: 50%;
-    margin-left: -25px;
-    top: 50%;
-    margin-top: -25px;
-    display: none; }
 
 .blog-post {
   margin-bottom: 25px; }
@@ -2703,6 +2696,16 @@ body.vjs-full-window {
 
 .outro {
   padding-top: 10px; }
+
+#blog-loading {
+  position: absolute;
+  left: 50%;
+  margin-left: -25px;
+  top: 50%;
+  margin-top: -25px;
+  background: url(../images/loading.gif) no-repeat 0 0;
+  width: 50px;
+  height: 50px; }
 
 #team-graphic li {
   max-width: 16.66%;
