--- a/css/all.css
+++ b/css/all.css
@@ -2571,13 +2571,14 @@ body.vjs-full-window {
 #blog-post-index {
   min-height: 300px;
   position: relative; }
-  #blog-post-index .loading {
+  #blog-post-index #blog-loading {
     position: absolute;
     left: 50%;
     margin-left: -25px;
-    top: 50%;
-    margin-top: -25px;
-    display: none; }
+    bottom: 200px;
+    background: url(../images/loading.gif) no-repeat 0 0;
+    width: 50px;
+    height: 50px; }
 
 .blog-post {
   margin-bottom: 25px; }
