--- a/css/all.css
+++ b/css/all.css
@@ -2626,6 +2626,14 @@ body.vjs-full-window {
         background: rgba(0, 0, 0, 0.5);
         color: #fff;
         padding: 10px; }
+    .blog-post article .Inspiration {
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      display: block;
+      background: url(../images/icon-inspiration-notext.svg) no-repeat 0 0; }
     .blog-post article footer a {
       text-decoration: underline; }
 
