--- a/css/blog.scss
+++ b/css/blog.scss
@@ -136,6 +136,10 @@
           color: $gsBlue;
           font-weight: 300;
         }
+        ul {
+          list-style: none;
+          padding: 0;
+        }
     }
 }
 
