--- a/css/primary-navigation.scss
+++ b/css/primary-navigation.scss
@@ -72,6 +72,16 @@
         &.darker-blue-bg {
           background: #8B8EEA;
         }
+        &.search-toggle {
+          padding-top: 15px;
+          color: #fff;
+          padding-left: 10px;
+          padding-bottom: 0;
+          cursor: pointer;
+            a {
+              display: none;
+            }
+        }
       }
     }
     form {
