--- a/css/blog.scss
+++ b/css/blog.scss
@@ -48,7 +48,7 @@
               padding: 10px;
             }
         }
-        .Inspiration {
+        .single-inspiration {
           width: 50px;
           height: 50px;
           position: absolute;
@@ -56,6 +56,7 @@
           right: 0;
           display: block;
           background: url(../images/icon-inspiration-notext.svg) no-repeat 0 0;
+          z-index: 2;
         }
         footer {
           a {
@@ -173,3 +174,4 @@
 .outro {
   padding-top: 10px;
 }
+
