--- a/css/all.css
+++ b/css/all.css
@@ -2565,6 +2565,13 @@ body.vjs-full-window {
   background-color: #fff;
   background-color: rgba(255, 255, 255, 0.9); }
 
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg); }
+
+  to {
+    -webkit-transform: rotate(360deg); } }
+
 #blog {
   -webkit-box-shadow: 0 0;
   -moz-box-shadow: 0 0;
@@ -2579,11 +2586,39 @@ body.vjs-full-window {
   #blog-post-index #blog-loading {
     position: absolute;
     left: 50%;
-    margin-left: -25px;
-    bottom: 200px;
-    background: url(../images/loading.gif) no-repeat 0 0;
-    width: 50px;
-    height: 50px; }
+    margin-left: -100px;
+    bottom: 150px;
+    background: url(../images/auburn-loader.png) no-repeat 0 0;
+    width: 200px;
+    height: 67px;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-name: rotate;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-delay: 1s;
+    -moz-animation-duration: 2s;
+    -moz-animation-name: rotate;
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+    -o-animation-delay: 1s;
+    -o-animation-duration: 2s;
+    -o-animation-name: rotate;
+    -o-animation-iteration-count: infinite;
+    -o-animation-timing-function: linear;
+    animation-delay: 1s;
+    animation-duration: 2s;
+    animation-name: rotate;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear; }
+  #blog-post-index #no-content-message {
+    border: 1px solid #eaeaea;
+    padding: 50px;
+    text-align: center; }
+    #blog-post-index #no-content-message span {
+      display: block;
+      font-size: 100px;
+      color: #44aeea; }
 
 .blog-post {
   margin-bottom: 25px; }
@@ -2594,7 +2629,7 @@ body.vjs-full-window {
       overflow: hidden;
       position: relative;
       margin-bottom: 15px;
-      background: #eaeaea;
+      border: 1px solid #eaeaea;
       display: -webkit-box;
       display: -moz-box;
       display: -ms-flexbox;
