--- a/css/blog.scss
+++ b/css/blog.scss
@@ -1,3 +1,12 @@
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
 #blog {
   @include box-shadow(0,0);
 }
@@ -11,11 +20,22 @@
   #blog-loading {
     position: absolute;
     left: 50%;
-    margin-left: -25px;
-    bottom: 200px;
-    background: url(../images/loading.gif) no-repeat 0 0;
-    width: 50px;
-    height: 50px;
+    margin-left: -100px;
+    bottom: 150px;
+    background: url(../images/auburn-loader.png) no-repeat 0 0;
+    width: 200px;
+    height: 67px;
+    @include funkyAnimation(1s,2s,rotate)
+  }
+  #no-content-message {
+    border: 1px solid #eaeaea;
+    padding: 50px;
+    text-align: center;
+      span {
+        display: block;
+        font-size: 100px;
+        color: $gsBlue;
+      }
   }
 }
 .blog-post {
@@ -27,7 +47,7 @@
           overflow: hidden;
           position: relative;
           margin-bottom: 15px;
-          background: #eaeaea;
+          border: 1px solid #eaeaea;
           @include flexbox;
           @include flexAlignItems(center);
           @include justifyContent(center);
