--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -191,6 +191,33 @@
   transform: rotate($degrees);
 
 }
+
+@mixin funkyAnimation ($delay, $duration, $animation) {
+  -webkit-animation-delay: $delay;
+  -webkit-animation-duration: $duration;
+  -webkit-animation-name: $animation;
+  -webkit-animation-iteration-count:  infinite;
+  -webkit-animation-timing-function: linear;
+
+  -moz-animation-delay: $delay;
+  -moz-animation-duration: $duration;
+  -moz-animation-name: $animation;
+  -moz-animation-iteration-count:  infinite;
+  -moz-animation-timing-function: linear;
+
+  -o-animation-delay: $delay;
+  -o-animation-duration: $duration;
+  -o-animation-name: $animation;
+  -o-animation-iteration-count:  infinite;
+  -o-animation-timing-function: linear;
+
+  animation-delay: $delay;
+  animation-duration: $duration;
+  animation-name: $animation;
+  animation-iteration-count:  infinite;
+  animation-timing-function: linear;
+}
+
 @mixin scale ($value) {
   -webkit-transform:scale($value);
   -moz-transform:scale($value);
