--- a/css/all.css
+++ b/css/all.css
@@ -1201,7 +1201,6 @@ body.vjs-full-window {
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-    min-height: 250px;
     -webkit-box-align: center;
     -ms-flex-align: center;
     -webkit-align-items: center;
@@ -1335,12 +1334,6 @@ body.vjs-full-window {
   background-position: center center;
   background-repeat: no-repeat;
   min-height: 500px; }
-  .full-width-image-bg .overlay-text {
-    padding: 15px;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.75);
-    margin-top: 50px;
-    font-style: italic; }
 
 #slider-wrapper .carousel-indicators {
   bottom: 0; }
@@ -1361,6 +1354,13 @@ body.vjs-full-window {
   #contact-form > div button {
     font-size: 50px;
     font-size: 3.125rem; }
+
+.overlay-text {
+  padding: 15px;
+  color: #fff;
+  background: rgba(0, 0, 0, 0.75);
+  margin-top: 50px;
+  font-style: italic; }
 
 #petition-wrap {
   color: #333; }
