--- a/css/blog.scss
+++ b/css/blog.scss
@@ -183,6 +183,8 @@
       display: block;
         img {
           border: 3px solid #eaeaea;
+          @include border-radius(50%);
+          @include box-shadow(-1px 0px 5px 0px, rgba(0,0,0,0.75));
         }
     }
     h1, p {
