--- a/css/sections.scss
+++ b/css/sections.scss
@@ -53,7 +53,6 @@
     h2 {
       padding: 0;
       margin: 0;
-      color: #fff;
       line-height: 1.75;
       @include font-size(45px);
       text-transform: uppercase;
@@ -144,7 +143,7 @@
   }
 }
 
-#faq {
+.faq {
   li {
     position: relative;
     cursor: pointer;
