--- a/css/all.scss
+++ b/css/all.scss
@@ -357,6 +357,7 @@ form {
   right: 0;
   bottom: -1000px;
   color: #fff;
+  z-index: 9;
   > div {
     background: rgba(234,90,58,0.8);
     @include border-radius(5px 5px 0 0);
