--- a/css/footer.scss
+++ b/css/footer.scss
@@ -3,6 +3,7 @@
   padding-top: 50px;
   color: #fff;
   @include box-shadow(inset 0px 5px 8px 0px , rgba(0,0,0,0.7));
+  z-index: -1;
     #site-map {
       li {
         padding: 5px 0;
