--- a/css/all.scss
+++ b/css/all.scss
@@ -73,6 +73,9 @@ strong {
 .gs-btn-blue {
   background: $gsBlue;
   color: #fff;
+    &:hover, a:hover {
+      color: #333!important;
+    }
 }
 .gs-btn-orange {
   background: $gsOrange;
@@ -359,15 +362,28 @@ form {
   color: #fff;
   z-index: 9;
   > div {
-    background: rgba(234,90,58,0.8);
     @include border-radius(5px 5px 0 0);
     padding-bottom: 20px;
+    @include box-shadow(1px 2px 2px 2px , rgba(0,0,0,0.5));
     .closePopup {
       @include font-size(30px);
       position: absolute;
       right: 15px;
       top: 15px;
       cursor: pointer;
+    }
+    header {
+      padding: 10px;
+      border-bottom: 2px solid #eaeaea;
+      text-align: center;
+      text-transform: uppercase;
+    }
+    footer {
+      text-align: center;
+      margin-top: 20px;
+        a {
+          display: block;
+        }
     }
   }
 }
