--- a/css/carousel_gallery.scss
+++ b/css/carousel_gallery.scss
@@ -84,7 +84,7 @@
   position: relative;
   background: #333;
   padding: 25px;
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
   .item {
     color: #fff;
     figure {
